Second Update hello.html

--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,6 @@
     <title>whatever</title>
   </head>
   <body>
-    <h1>hello world</h1>
+    <h1 style='color: blue;'>hello world</h1>
   </body>
 </html>
